// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when checked 1`] = `
<div
  aria-checked="true"
  aria-label="Unlabelled checkbox"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  style={
    Object {
      "border": "1px solid black",
      "borderRadius": "6px",
      "cursor": "pointer",
      "display": "inline-block",
      "height": "25px",
      "position": "relative",
      "userSelect": "none",
      "width": "25px",
    }
  }
  tabIndex="0"
>
  <span
    style={
      Object {
        "left": "6px",
        "position": "absolute",
        "top": "3px",
      }
    }
  >
    ✓
  </span>
</div>
`;

exports[`should render correctly when unchecked 1`] = `
<div
  aria-checked="false"
  aria-label="Unlabelled checkbox"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  style={
    Object {
      "border": "1px solid black",
      "borderRadius": "6px",
      "cursor": "pointer",
      "display": "inline-block",
      "height": "25px",
      "position": "relative",
      "userSelect": "none",
      "width": "25px",
    }
  }
  tabIndex="0"
>
  <span
    style={
      Object {
        "left": "6px",
        "position": "absolute",
        "top": "3px",
      }
    }
  />
</div>
`;
